--- a/compass.css
+++ b/compass.css
@@ -1,4 +1,6 @@
-/* body {
+/* Compass and Needle CSS */
+
+body {
     margin: 0;
     display: flex;
     justify-content: center;
@@ -19,28 +21,25 @@
     height: 100px;
     background-color: red;
     position: absolute;
-    top: 50%;
+    top: 0; /* Start needle from the top of the compass */
     left: 50%;
-    transform-origin: top;
+    transform-origin: top center; /* Rotate around the top center of the needle */
     transform: translateX(-50%) rotate(0deg);
-} */
-
-
-
-.full-width-block {
-    position : relative;
-    /* // div which covers entire screen area */
 }
-   
+
+/* Other styles */
+.full-width-block {
+    position: relative;
+}
+
 .full-width-block .hidden-overlay {
-position : absolute;
-top : 0;
-left : 0;
-width : 100%;
-height : 100%;
-/* z-index : // as per your requirement, just make sure overlay is on  top of everything on the screen */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .hide {
-display : none;
+    display: none;
 }
