--- a/buspass.css
+++ b/buspass.css
@@ -92,7 +92,7 @@ nav{
     padding-top: 1px;
 }
 .wrapper{
-    background-color: #ADD8E6;
+    background-color: #62AEEA;
     height: 735px;
     margin: 10px;
 }
@@ -194,7 +194,7 @@ nav{
 
 footer{
     width: 100%;
-    background-color: #FF0000;
+    background-color: #62AEEA;
     height: 30px;
 }
 
