--- a/compass.css
+++ b/compass.css
@@ -9,11 +9,16 @@ body {
 }
 
 .compass {
-    width: 200px;
-    height: 170px;
-    border: 1px solid black;
+    width: 150px; /* Your desired width */
+    height: 150px; /* Your desired height */
+    border: 2px solid black;
     border-radius: 50%;
     position: relative;
+    display: flex; /* Add this line */
+    justify-content: center; /* Add this line */
+    align-items: center; /* Add this line */
+    font-size: 2.5em; /* Adjust font size if needed */
+    color: black; /* Ensure text color is black */
 }
 
 .needle {
