--- a/style.css
+++ b/style.css
@@ -27,28 +27,12 @@
 }
 
 #display {
-    font-size: 2.5em; /* Increased font size */
+    font-size: 1.5em;
     text-align: center;
-    margin-top: 10px; /* Adjusted to raise text */
-    transition: opacity 1s ease;
-    font-weight: bold; /* Make text bold */
+    margin-top: 20px;
+    transition: opacity 1s ease; /* Ensure transition is defined here */
 }
 
 .fade {
-    opacity: 0;
-}
-
-#animated {
-    transition: transform 0.1s; /* Smooth transition for tilt effect */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%; /* Ensure it takes full height of the container */
-}
-
-.countdown {
-    text-align: center;
-    font-size: 2em; /* Increased font size for countdown */
-    color: black; /* Set color to black */
-    font-weight: bold; /* Make text bold */
+    opacity: 0; /* Fade out effect */
 }
