--- a/buspass.css
+++ b/buspass.css
@@ -85,7 +85,7 @@ nav{
     padding-top: 1px;
 }
 .wrapper{
-    background-color: white;
+    background-color: 081a26;
     height: 735px;
     margin: 10px;
 }
