--- a/buspass.css
+++ b/buspass.css
@@ -182,7 +182,7 @@ nav{
 }
 footer{
     width: 100%;
-    background-color: white;
+    background-color: 081a26;
     height: 30px;
 }
 @-webkit-keyframes clockwise /* Safari and Chrome */ {
